# FITTEST

./: README
ITE Components standalone/Instrumenter Tools/abci/tester/: asit.cabal
ITE Components standalone/Model  Inference and Transformer tools/FSM-based/: pom.xml
ITE Components standalone/Oracle Tools/Haslog suite/daikonUtils/declmerge/: declmerge.cabal
ITE Components standalone/Oracle Tools/Haslog suite/daikonUtils/declmerge/src/: ex1.decl
ITE Components standalone/phptesting/eu.fittest.ucl.watt/: .classpath
ITE Components standalone/transformtools/eu.fittest.fbk.cte2android/: .project
ITE Components standalone/transformtools/eu.fittest.xinputminer/: .project
ITE Release/: pom.xml  readme.txt  version.txt
ITE Release/abci/: pom.xml
ITE Release/abci/assemblies/: assemblyLinux64.xml
ITE Release/abci/v1.1/util/abciExample/: abciBase.cabal
ITE Release/declmerge/: pom.xml
ITE Release/declmerge/assemblies/: assemblyLinux64.xml  assemblyWin32.xml
ITE Release/eu.fittest.bnm/: pom.xml
ITE Release/eu.fittest.components/: pom.xml
ITE Release/eu.fittest.components/eu.fittest.component.appdescription.ite.services/: .project
ITE Release/eu.fittest.components/eu.fittest.component.common/: .project
ITE Release/eu.fittest.components/eu.fittest.component.junit/: pom.xml
ITE Release/eu.fittest.components/eu.fittest.component.junit.ite.services/: .project
ITE Release/eu.fittest.components/eu.fittest.component.optimizer/: pom.xml
ITE Release/eu.fittest.components/eu.fittest.component.optimizer.spec/: pom.xml
ITE Release/eu.fittest.cte2selenium/: pom.xml
ITE Release/eu.fittest.distributed.framework/: .project
ITE Release/eu.fittest.distributed.framework/eu.fittest.agent.ite/: pom.xml
ITE Release/eu.fittest.distributed.framework/eu.fittest.agent.sut/: pom.xml
ITE Release/eu.fittest.distributed.framework/simplewebserver/: .project  pom.xml
ITE Release/eu.fittest.eclipse/: pom.xml
ITE Release/eu.fittest.eclipse.allinonegui/: .project  plugin.xml
ITE Release/eu.fittest.eclipse/eu.fittest.eclipse.asli.feature/: .project  feature.xml  pom.xml
ITE Release/eu.fittest.eventSequenceGenerator/: readme.txt
ITE Release/eu.fittest.fbk/: pom.xml
ITE Release/eu.fittest.fbk.efsm2ct.efsm2mon/: .classpath
ITE Release/eu.fittest.fbk.efsm2ct.flexdrv/: .project  pom.xml
ITE Release/eu.fittest.fbk.efsm2ct.log2efsm/: .project
ITE Release/eu.fittest.fbk.efsm2ct.tools/: .project
ITE Release/eu.fittest.fbkflex/: pom.xml
ITE Release/eu.fittest.phplog.eventabstraction/: pom.xml
ITE Release/eu.fittest.phplogger/: pom.xml
ITE Release/eu.fittest.softeam/: pom.xml
ITE Release/eu.fittest.ucl.autoabs/: pom.xml
ITE Release/eu.fittest.ucl.eventinf/: .project
ITE Release/eu.fittest.ucl.modelinference/: .project
ITE Release/eu.fittest.upvlc/: README.html  pom.xml
ITE Release/eu.fittest.uu/: macos_fix.sh  pom.xml
ITE Release/eu.fittest.uu/tools/Hashlog/jur/: README.txt  hashlog.cabal
ITE Release/eu.fittest.uu/tools/Hashlog/jur/src/Eu/Fittest/Logging/: Main.hs
ITE Release/eu.fittest.uu/tools/Hashlog/jur/src/Eu/Fittest/Logging/Analysis/: Base.hs
ITE Release/eu.fittest.uu/tools/Hashlog/jur/src/Eu/Fittest/Logging/Compression/: Serializer.hs
ITE Release/eu.fittest.uu/tools/Hashlog/jur/src/Eu/Fittest/Logging/Daikon/: DaikonAST.hs  DaikonConverter.hs
ITE Release/eu.fittest.uu/tools/Hashlog/jur/src/Eu/Fittest/Logging/Daikon/LowLevelOracle/: LLOBase.hs
ITE Release/eu.fittest.uu/tools/Hashlog/jur/src/Eu/Fittest/Logging/XML/: AppEvent.hs  Base.hs  Value.hs
ITE Release/eu.fittest.uu/tools/Hashlog/v1.2/: hashlog.cabal
ITE Release/eu.fittest.uu/tools/Hashlog/v1.2/src/Eu/Fittest/Logging/: Main.hs
ITE Release/eu.fittest.uu/tools/Hashlog/v1.2/src/Eu/Fittest/Logging/Compression/: Compress.hs  RawlogPrettyPrinter.hs
ITE Release/eu.fittest.uu/tools/Hashlog/v1.2/src/Eu/Fittest/Logging/Daikon/: DaikonConverter.hs
ITE Release/eu.fittest.uu/tools/Hashlog/v1.2/src/Eu/Fittest/Logging/Daikon/LowLevelOracle/: LLOBase.hs
ITE Release/eu.fittest.uu/tools/Hashlog/v1.2/src/Eu/Fittest/Logging/XML/: XML2rawFITTEST.hs
ITE Release/requirements/: installLocallyAll.sh
ITE-components/: README
ITE-components/logtools/daikonUtils/daikonice/v0/: fittest-oracle-report.cabal
ITE/dtraceSplit/: pom.xml
ITE/eu.fittest.phplog/: .project  pom.xml
ITE/eu.fittest.phplog.analyzer/: pom.xml
ITE/eu.fittest.ucl.eventinf/: pom.xml
ITE/eu.fittest.ucl.ocon/: pom.xml
ITE/eu.fittest.xinputminer/: pom.xml
other-FITTEST-tools/trt/: Notes.txt
rogue-user-testing/: README  addtoheader.sh
rogue-user-testing/monkey/: build.xml
rogue-user-testing/testdir/: copyright.txt
trunk/ITE Components standalone/logtools/abci/v1/lib/: asil.cabal
trunk/ITE Components standalone/logtools/abci/v1/lib/src/: ByteCodeBranchInfo.ag  ByteCodeTrfAst.ag  DistNameInfo.ag  InsertLabels.ag  ParseUtil.hs  PrettyUtil.hs
trunk/ITE Components standalone/logtools/abci/v1/lib/src/obsolete/: Language.ag
trunk/ITE Release/: LICENSE  build.sh  pom.xml  readme.txt  setenv.bat
trunk/ITE Release/eu.fittest.uu/abci/v1.1/lib/: asil.cabal  uuagc_options
trunk/ITE Release/eu.fittest.uu/abci/v1.1/lib/src/ByteCode/: BranchInfo.ag  InsertLabels.ag  NumberAstNodes.ag
trunk/ITE Release/eu.fittest.uu/abci/v1.1/lib/src/ByteCode/Trf/: InjectAbc.ag  InjectRefl.ag
trunk/ITE Release/eu.fittest.uu/abci/v1.1/lib/src/Parser/: Parser.hs
trunk/ITE Release/eu.fittest.uu/abci/v1.1/lib/src/Pretty/: AVMTree.ag  AVMUtil.hs
trunk/ITE-components/logtools/abci/v1/derivedtools/abciLog/: abciLog.cabal
trunk/ITE-components/logtools/lopi/: lopi.cabal
trunk/ITE-components/logtools/lopi/src/Eu/Fittest/: RPInferencer.hs
trunk/ITE-components/logtools/lopi/src/Eu/Fittest/Lopi/: Main.hs
trunk/ITE-components/logtools/lopi/src/Eu/Fittest/Lori/: Main.hs
trunk/ITE-components/logtools/lopi/src/Eu/Fittest/Pretty/: Events.hs
trunk/ITE-components/logtools/lopi/test/: main_test.pat
trunk/ITE-components/logtools/lopi/test/intersect/: witSet1.out
trunk/ITE-components/logtools/lopi/test/perl/reduction/: rules.pat
(+3469 files in other folders)
