cabal-version: >= 1.8
build-type: Simple
name: abciExample
version: 1.2.2.1
license: BSD3
maintainer: Arie Middelkoop <ariem@cs.uu.nl>
description: An example ActionScript bytecode instrumenter. This example is just for template to show how to write such a tool using ASIL.
synopsis: An demo-example of ActionScript instrumenter.
stability: Experimental
copyright: Universiteit Utrecht

executable abciExample
  build-depends: base >= 4, base < 5
  build-depends: bytestring >= 0.9, utf8-string >= 0.3
  build-depends: asil >= 1.2
  main-is: Main.hs
  hs-source-dirs: src
  ghc-options: -rtsopts=all -O2

