cabal-version: >= 1.8
build-type: Custom
name: fittest-oracle-report
version: 1.0
license: BSD3
maintainer: Wishnu Prasetya <S.W.B.Prasetya@uu.nl>
description: A library for generating of html reports resulted from Oracle inference techniques provided by the FITTEST project
category: Testing
stability: Experimental
synopsis: HTML Representation of the FITTEST Oracles
copyright: Universiteit Utrecht


-- make sure that all externally exposed modules are actually used
library
  build-depends: base >= 4, containers >= 0.5.0.0, text >= 0.11.2.3, attoparsec >= 0.10.4.0, html >= 1.0.1.2, filepath >= 1.3.0.0 
  
  exposed-modules: Eu.Fittest.Oracles.Pretty.HTMLPrettyPrinter
  exposed-modules: Eu.Fittest.Oracles.Ast.OrcsDataType
  exposed-modules: Eu.Fittest.Oracles.Parser.DaikonParser

  hs-source-dirs: src

executable daikonice
  build-depends: base >= 4, 
                 containers >= 0.5.0.0, 
                 text >= 0.11.2.3, 
                 attoparsec >= 0.10.4.0, 
                 html >= 1.0.1.2,
                 filepath >= 1.3.0.1
  main-is: Eu/Fittest/Oracles/Pretty/Main.hs
  hs-source-dirs: src
  ghc-options: -O2 -rtsopts=all
               -static -optc-static -optl-static -optl-pthread