cabal-version: >= 1.8
build-type: Custom
name: asil
version: 1.2.3
license: BSD3
maintainer: Arie Middelkoop <ariem@cs.uu.nl>
description: A library for the analysis and instrumentation of ActionScript programs in Flash files.
category: Bytecode Utility
stability: Experimental
synopsis: ASIL: Action Script Instrumentation Library
copyright: Universiteit Utrecht
extra-source-files: uuagc_options

library
  build-depends: base >= 4, base < 5
  build-depends: bytestring >= 0.9.1.7, filepath >= 1.1, directory >= 1.0
  build-depends: utf8-string >= 0.3.6, array >= 0.3.0.1, mtl >= 2.0.1.0
  build-depends: data-binary-ieee754 >= 0.4.2.1, binary >= 0.5.0.2, zlib >= 0.5.2.0
  build-depends: pretty >= 1.0.1.1, fgl >= 5.4.2.3, deepseq >= 1.1.0.3
  build-depends: containers >= 0.3.0.0
  build-depends: uuagc >= 0.9.39.0, uuagc-cabal >= 1.0.0.7
  build-depends: zip-archive >= 0.1.1.7
  build-depends: derive >= 2.5.3, chunks >= 2007.4.18
  build-depends: regex-tdfa >= 1.1.8
  build-depends: arrows >= 0.4.4.0
  
  -- original ASIL suite from Arie:
  exposed-modules: BranchRelToAbs, FixJumpDestinations
  exposed-modules: ByteCode, Parser, ParseUtil, PrettyCode, PrettyTree, InstrSize, InsertLabels, ByteCodeSupport
  exposed-modules: ByteCodeTrf, ByteCodeTrfDSL, ByteCodeDSL
  exposed-modules: Fixpoint, ParamAnalysis, DeadCodeRemoval, Consolidate
  exposed-modules: Env, ProgInfo, GathSymbolTables, SymView, EnvInfo, Heap
  exposed-modules: TrfInjectAbc, TrfInjectRefl, TrfInjectSerializable, ExtractAbc
  exposed-modules: PrettyUtil
  exposed-modules: GenInh
  exposed-modules: Options, Stats, TestIt, ForceAstEval 
  exposed-modules: SwfFileCheck, RenumberBlocks, GenSymLib, Templates
  -- end Arie
  
  -- libs by WP:
  -- to get control flow graphs
  exposed-modules: XCFG
  -- logging related
  exposed-modules: LogPointsLib
  -- FITTEST logging instrumentation:
  exposed-modules: SimpleLogInj
  -- end WP
  
  -- Examples
  -- Original example instrumentation by Arie:
  exposed-modules: DemoInstrumentation1
  -- The used demo example instrumentation now:
  exposed-modules: DemoInstrumentation2
  -- Alexander's instrumentation:
  exposed-modules: TestTrans, TestTrans1, TestTrans2
  -- end examples

  hs-source-dirs: src
  ghc-options:  -O2 
                -fspec-constr-count=5      
                -static -optc-static -optl-static -optl-pthread
  -- uncoment the options below to enable profiling:                
  -- ghc-prof-options: -prof
  --                  -auto-all
  --                  -caf-all 
  -- add this options to build static binary
  -- -static -optc-static -optl-static -optl-pthread
