cabal-version: >= 1.8
build-type: Simple
name: abciLog
version: 1.0
license: BSD3
maintainer: Arie Middelkoop <amiddelk@gmail.com>, Alexander Elyasov <alex.elyasov@gmail.com>, Wishnu Prasetya <s.w.b.prasetya@uu.nl>
description: A tool to inject logging code to ActionScript programs.
synopsis: A tool to inject logging code to ActionScript programs.
category: Tools
stability: Experimental
copyright: Universiteit Utrecht

executable abciLog
  build-depends: base >= 4, base < 5
  build-depends: bytestring >= 0.9, utf8-string >= 0.3, deepseq >= 1.1.0.2
  build-depends: asil >= 1.2
  main-is: Main.hs
  hs-source-dirs: src 
  ghc-options: -O2 -rtsopts=all
                -static -optc-static -optl-static -optl-pthread
  -- ghc-prof-options: -prof -auto-all -caf-all 
  -- add this options to build static binary
  -- -static -optc-static -optl-static -optl-pthread